--- a/.github/workflows/Centos_kernel_latest.yml
+++ b/.github/workflows/Centos_kernel_latest.yml
@@ -47,7 +47,7 @@ jobs:
       id: check
       run: |
         github_centos_ver=$(curl -s 'https://github.com/ylx2016/kernel/releases' | grep 'Centos_Kernel' | grep '_latest_bbr_' | head -n 1 | awk -F '"' '{print $2}' | awk -F '_' '{print $3}')
-        kernel_ver=$(curl -s https://www.kernel.org/ | grep 'https://git.kernel.org/stable/h/' | head -n 1 | awk -F 'v' '{print $2}' | awk -F '["]' '{print $1}')
+        kernel_ver=$(curl -s https://www.kernel.org/ | awk '/stable/{getline a;print a}' | head -n 1 | awk -F '[>]' '{print $3}' | awk -F '[<]' '{print $1}')
         if [ "$github_centos_ver" == "$kernel_ver" ];then
             echo "::set-output name=status::fail"
         else
@@ -61,7 +61,7 @@ jobs:
       run: |
         df -hT $PWD
         kernel_file=$(curl -s https://www.kernel.org/ | grep 'alt="Download"' | awk -F '"' '{print $2}')
-        kernel_ver=$(curl -s https://www.kernel.org/ | grep 'https://git.kernel.org/stable/h/' | head -n 1 | awk -F 'v' '{print $2}' | awk -F '["]' '{print $1}')
+        kernel_ver=$(curl -s https://www.kernel.org/ | awk '/stable/{getline a;print a}' | head -n 1 | awk -F '[>]' '{print $3}' | awk -F '[<]' '{print $1}')
         wget -O kernel.tar.xz $kernel_file
         tar -Jxvf kernel.tar.xz -C /workdir && cd /workdir/linux-$kernel_ver
         echo "::set-output name=status::success"
@@ -78,7 +78,7 @@ jobs:
       if: steps.code.outputs.status == 'success'
       working-directory: /workdir
       run: |
-        kernel_ver=$(curl -s https://www.kernel.org/ | grep 'https://git.kernel.org/stable/h/' | head -n 1 | awk -F 'v' '{print $2}' | awk -F '["]' '{print $1}')
+        kernel_ver=$(curl -s https://www.kernel.org/ | awk '/stable/{getline a;print a}' | head -n 1 | awk -F '[>]' '{print $3}' | awk -F '[<]' '{print $1}')
         cd linux-$kernel_ver
         wget -O .config https://raw.githubusercontent.com/ylx2016/kernel/master/config_elrepo
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
@@ -104,7 +104,7 @@ jobs:
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success' && !cancelled()
       run: |
-        kernel_ver=$(curl -s https://www.kernel.org/ | grep 'https://git.kernel.org/stable/h/' | head -n 1 | awk -F 'v' '{print $2}' | awk -F '["]' '{print $1}')
+        kernel_ver=$(curl -s https://www.kernel.org/ | awk '/stable/{getline a;print a}' | head -n 1 | awk -F '[>]' '{print $3}' | awk -F '[<]' '{print $1}')
         echo "::set-output name=release_tag::Centos_Kernel_${kernel_ver}_latest_bbr_$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
         echo "for centos 7" >> release.txt
