--- a/.github/workflows/update_elrepo_config.yml
+++ b/.github/workflows/update_elrepo_config.yml
@@ -53,7 +53,7 @@ jobs:
         config=/home/runner/work/kernel/kernel/config_elrepo
         action_kernel_ver=$(grep "Linux/x86_64" ${config} | awk -F '[-]' '{print $1}' | awk -F ' ' '{print $3}')
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
-         if [ "$action_kernel_ver" == "$kernel_ver" ];then
+         if [ "$action_kernel_ver" =~ "$kernel_ver" ];then
             echo "::set-output name=status::fail"
         else
             echo "::set-output name=status::success"
