--- a/.github/workflows/update_elrepo_config.yml
+++ b/.github/workflows/update_elrepo_config.yml
@@ -53,9 +53,9 @@ jobs:
         config=/home/runner/work/kernel/kernel/config_elrepo
         action_kernel_ver=$(grep "Linux/x86_64" ${config} | awk -F '[-]' '{print $1}' | awk -F ' ' '{print $3}')
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
-        echo $action_kernel_ver
-        echo $kernel_ver
-        if [ "$action_kernel_ver" == "*$kernel_ver" ];then
+        echo "action_kernel_ver=" $action_kernel_ver
+        echo "kernel_ver=" $kernel_ver
+        if [ $action_kernel_ver == *$kernel_ver ];then
             echo "::set-output name=status::fail"
         else
             echo "::set-output name=status::success"
