--- a/.github/workflows/Ubuntu_kernel_latest_bbrplus.yml
+++ b/.github/workflows/Ubuntu_kernel_latest_bbrplus.yml
@@ -56,13 +56,14 @@ jobs:
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
         echo "github_ver=" $github_ver
         echo "kernel_ver=" $kernel_ver
+        $github_ver="5.12.0"
         result=$(echo $github_ver | grep "${kernel_ver}")
         if [[ "$result" != "" ]];then
             echo "::set-output name=status::fail"
         else
             echo "::set-output name=status::success"
         fi
-        echo steps.check.outputs.status
+        echo ${{steps.check.outputs.status}}
 
     - name: Get source code
       working-directory: /workdir
