--- a/.github/workflows/Ubuntu_kernel_latest_bbrplus.yml
+++ b/.github/workflows/Ubuntu_kernel_latest_bbrplus.yml
@@ -56,10 +56,11 @@ jobs:
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
         echo "github_ver=" $github_ver
         echo "kernel_ver=" $kernel_ver
-        case "$github_ver" in
-            *"$kernel_ver"*) echo echo "::set-output name=status::fail"
-            *) "::set-output name=status::success"
-        esac
+        if [[ $github_ver == *"$kernel_ver"* ]]; then
+            echo "::set-output name=status::fail"
+        else
+            echo "::set-output name=status::success"
+        fi
 
     - name: Get source code
       working-directory: /workdir
