--- a/.github/workflows/Centos_kernel_latest_xanmod_lts_gcc9.yml
+++ b/.github/workflows/Centos_kernel_latest_xanmod_lts_gcc9.yml
@@ -67,7 +67,7 @@ jobs:
         xanmod_lts_ver=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/lts/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}' | awk -F '[-]' '{print $1}')
         kernel_file=https://github.com/xanmod/linux/archive/refs/tags/$xanmod_lts.zip
         wget $kernel_file && unzip $xanmod_lts.zip -d /workdir
-        
+        echo "::set-output name=status::success"
         
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
