--- a/.github/workflows/Centos_kernel_latest_xanmod_lts_gcc9_C8.yml
+++ b/.github/workflows/Centos_kernel_latest_xanmod_lts_gcc9_C8.yml
@@ -6,7 +6,7 @@
 # Change from P3TERX
 #
 
-name: Centos Kernel latest XANMOD LTS GCC9 C8
+name: Centos Kernel latest XANMOD LTS C8
 
 on:
   workflow_dispatch:
