--- a/.github/workflows/Centos_kernel_latest_xanmod_cacule_gcc9.yml
+++ b/.github/workflows/Centos_kernel_latest_xanmod_cacule_gcc9.yml
@@ -10,8 +10,8 @@ name: Centos Kernel latest XANMOD cacule GCC9
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "30 20 * * 1,5"
+  #schedule:
+    #- cron: "30 20 * * 1,5"
    # inputs:
      # ssh:
        # description: 'SSH connection to Actions'
