--- a/.github/workflows/Ubuntu_kernel_arm64_5.12.yml
+++ b/.github/workflows/Ubuntu_kernel_arm64_5.12.yml
@@ -12,7 +12,7 @@ on:
   workflow_dispatch:
   schedule:
     #- cron: "36 20 * * 2,6"
-    #- cron: "36 20 * * *"
+    - cron: "36 20 * * *"
    # inputs:
     #  ssh:
      #   description: 'SSH connection to Actions'
