--- a/.github/workflows/Centos_kernel_arm64_5.12.yml
+++ b/.github/workflows/Centos_kernel_arm64_5.12.yml
@@ -10,9 +10,9 @@ name: Centos Kernel ARM64 5.12
 
 on:
   workflow_dispatch:
-  schedule:
+  #schedule:
     #- cron: "38 20 * * 1,4"
-    - cron: "39 20 * * *"
+    #- cron: "39 20 * * *"
    # inputs:
      # ssh:
        # description: 'SSH connection to Actions'
