--- a/.github/workflows/Ubuntu_kernel_arm64_5.13.yml
+++ b/.github/workflows/Ubuntu_kernel_arm64_5.13.yml
@@ -10,8 +10,8 @@ name: Ubuntu Kernel ARM64 5.13
 
 on:
   workflow_dispatch:
-  #schedule:
-    #- cron: "36 20 * * 2,6"
+  schedule:
+    - cron: "36 20 * * 2,6"
     #- cron: "36 20 * * *"
    # inputs:
     #  ssh:
