--- a/.github/workflows/Ubuntu_kernel_arm64_5.13.yml
+++ b/.github/workflows/Ubuntu_kernel_arm64_5.13.yml
@@ -38,7 +38,7 @@ jobs:
       run: |
         sudo -E sed -i~orig -e 's/# deb-src/deb-src/' /etc/apt/sources.list   
         sudo -E apt-get -qq update
-        sudo -E apt-get -qq install build-essential bzip2 gawk gettext git patch unzip htop wget curl zstd libzstd-dev libzstd1 python3-zstd -y
+        sudo -E apt-get -qq install build-essential bzip2 gawk gettext git patch unzip htop wget curl zstd libzstd-dev libzstd1 -y
         sudo -E apt-get -qq build-dep linux -y
         sudo -E apt-get -qq install build-essential binutils-multiarch ncurses-dev alien -y
         sudo -E apt-get -qq install --install-recommends gcc-aarch64-linux-gnu -y
