--- a/5.13.arm64.config
+++ b/5.13.arm64.config
@@ -1,7 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm64 5.13.0-1.el9.aarch64 Kernel Configuration
-#https://kojihub.stream.centos.org/koji/search?match=glob&type=build&terms=kernel-5.13*
 #
 CONFIG_CC_VERSION_TEXT="gcc (GCC) 11.1.1 20210623 (Red Hat 11.1.1-6)"
 CONFIG_CC_IS_GCC=y
@@ -1141,11 +1140,11 @@ CONFIG_TCP_CONG_YEAH=m
 CONFIG_TCP_CONG_ILLINOIS=m
 CONFIG_TCP_CONG_DCTCP=m
 CONFIG_TCP_CONG_CDG=m
-CONFIG_TCP_CONG_BBR=y
-CONFIG_TCP_CONG_BBR2=m
-CONFIG_DEFAULT_BBR=y
+CONFIG_TCP_CONG_BBR=m
+CONFIG_TCP_CONG_BBR2=y
+CONFIG_DEFAULT_BBR2=y
 # CONFIG_DEFAULT_RENO is not set
-CONFIG_DEFAULT_TCP_CONG="bbr"
+CONFIG_DEFAULT_TCP_CONG="bbr2"
 CONFIG_TCP_MD5SIG=y
 CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
@@ -1587,46 +1586,49 @@ CONFIG_LLC=m
 # CONFIG_IEEE802154 is not set
 CONFIG_NET_SCHED=y
 
-#
+##
 # Queueing/Scheduling
 #
-# CONFIG_NET_SCH_CBQ is not set
+CONFIG_NET_SCH_CBQ=m
 CONFIG_NET_SCH_HTB=m
 CONFIG_NET_SCH_HFSC=m
-# CONFIG_NET_SCH_ATM is not set
+CONFIG_NET_SCH_ATM=m
 CONFIG_NET_SCH_PRIO=m
-# CONFIG_NET_SCH_MULTIQ is not set
+CONFIG_NET_SCH_MULTIQ=m
 CONFIG_NET_SCH_RED=m
-# CONFIG_NET_SCH_SFB is not set
+CONFIG_NET_SCH_SFB=m
 CONFIG_NET_SCH_SFQ=m
-# CONFIG_NET_SCH_TEQL is not set
+CONFIG_NET_SCH_TEQL=m
 CONFIG_NET_SCH_TBF=m
 CONFIG_NET_SCH_CBS=m
 CONFIG_NET_SCH_ETF=m
 CONFIG_NET_SCH_TAPRIO=m
 CONFIG_NET_SCH_GRED=m
-# CONFIG_NET_SCH_DSMARK is not set
+CONFIG_NET_SCH_DSMARK=m
 CONFIG_NET_SCH_NETEM=m
-# CONFIG_NET_SCH_DRR is not set
+CONFIG_NET_SCH_DRR=m
 CONFIG_NET_SCH_MQPRIO=m
-# CONFIG_NET_SCH_SKBPRIO is not set
-# CONFIG_NET_SCH_CHOKE is not set
-# CONFIG_NET_SCH_QFQ is not set
-# CONFIG_NET_SCH_CODEL is not set
-CONFIG_NET_SCH_FQ_CODEL=y
+CONFIG_NET_SCH_SKBPRIO=m
+CONFIG_NET_SCH_CHOKE=m
+CONFIG_NET_SCH_QFQ=m
+CONFIG_NET_SCH_CODEL=m
+CONFIG_NET_SCH_FQ_CODEL=m
 CONFIG_NET_SCH_CAKE=m
 CONFIG_NET_SCH_FQ=m
-# CONFIG_NET_SCH_HHF is not set
-# CONFIG_NET_SCH_PIE is not set
+CONFIG_NET_SCH_HHF=m
+CONFIG_NET_SCH_PIE=y
+CONFIG_NET_SCH_FQ_PIE=y
 CONFIG_NET_SCH_INGRESS=m
-# CONFIG_NET_SCH_PLUG is not set
+CONFIG_NET_SCH_PLUG=m
 CONFIG_NET_SCH_ETS=m
 CONFIG_NET_SCH_DEFAULT=y
 # CONFIG_DEFAULT_FQ is not set
-CONFIG_DEFAULT_FQ_CODEL=y
+# CONFIG_DEFAULT_CODEL is not set
+# CONFIG_DEFAULT_FQ_CODEL is not set
+CONFIG_DEFAULT_FQ_PIE=y
 # CONFIG_DEFAULT_SFQ is not set
 # CONFIG_DEFAULT_PFIFO_FAST is not set
-CONFIG_DEFAULT_NET_SCH="fq_codel"
+CONFIG_DEFAULT_NET_SCH="fq_pie"
 
 #
 # Classification
