--- a/.github/workflows/Ubuntu_kernel_latest.yml
+++ b/.github/workflows/Ubuntu_kernel_latest.yml
@@ -117,7 +117,8 @@ jobs:
         echo "::set-output name=status::success"
 
     - name: Upload kernel to release
-      uses: softprops/action-gh-release@v1
+      #uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v0.1.7
       if: steps.tag.outputs.status == 'success' && !cancelled()
       env:
         GITHUB_TOKEN: ${{ secrets.TOKEN }}
