--- a/.github/workflows/update_elrepo_config.yml
+++ b/.github/workflows/update_elrepo_config.yml
@@ -14,8 +14,8 @@ on:
     #    description: 'SSH connection to Actions'
     #    required: false
     #    default: 'false'
-  #schedule:
-    #- cron: "30 20 * * *"
+  schedule:
+    - cron: "30 20 * * *"
     
 env:
   TZ: Asia/Shanghai
