--- a/.github/workflows/Centos_kernel_latest_bbrplus.yml
+++ b/.github/workflows/Centos_kernel_latest_bbrplus.yml
@@ -10,8 +10,8 @@ name: Centos Kernel Latest BBRPLUS
 
 on:
   workflow_dispatch:
-  #schedule:
-   #- cron: "39 20 * * 2,4"
+  schedule:
+   - cron: "39 20 * * 2,4"
    # inputs:
      # ssh:
        # description: 'SSH connection to Actions'
@@ -82,8 +82,8 @@ jobs:
       run: |
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
         cd linux-$kernel_ver
-        wget -O 5.13_bbrplus.patch https://raw.githubusercontent.com/ylx2016/kernel/master/convert_official_linux-5.13.x_src_to_bbrplus.patch
-        patch -p0 < 5.13_bbrplus.patch
+        wget -O 5.10_bbrplus.patch https://raw.githubusercontent.com/ylx2016/kernel/master/convert_official_linux-5.10.x_src_to_bbrplus.patch
+        patch -p0 < 5.10_bbrplus.patch
         wget -O .config https://raw.githubusercontent.com/ylx2016/kernel/master/config-5.10.27-bbrplus
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
         echo -e "$(nproc) thread compile"
@@ -116,7 +116,8 @@ jobs:
         echo "::set-output name=status::success"
 
     - name: Upload kernel to release
-      uses: softprops/action-gh-release@v1
+      #uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v0.1.7
       if: steps.tag.outputs.status == 'success' && !cancelled()
       env:
         #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
