--- a/.github/workflows/Centos_kernel_latest_xanmod_lts_C8.yml
+++ b/.github/workflows/Centos_kernel_latest_xanmod_lts_C8.yml
@@ -15,8 +15,8 @@ on:
    #     description: 'SSH connection to Actions'
    #     required: false
    #     default: 'false'
-  #schedule:
-    #- cron: "38 20 * * 3,6"
+  schedule:
+    - cron: "38 20 * * 3,6"
 
 env:
   UPLOAD_DIR: false
@@ -85,9 +85,6 @@ jobs:
         xanmod_cacule_ver=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/lts/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}' | awk -F '[-]' '{print $1}')
         xanmod_cacule=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/lts/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}')
         cd linux-$xanmod_cacule
-        if [ -f "CONFIGS/xanmod/gcc/config" ]; then
-          cp CONFIGS/xanmod/gcc/config .config
-        fi
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
         echo -e "$(nproc) thread compile"
         sudo time make -j$(nproc) rpm-pkg
@@ -118,7 +115,8 @@ jobs:
         echo "::set-output name=status::success"
         
     - name: Upload kernel to release
-      uses: softprops/action-gh-release@v1
+      #uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v0.1.7
       if: steps.tag.outputs.status == 'success' && !cancelled()
       env:
         GITHUB_TOKEN: ${{ secrets.TOKEN }}
