--- a/.github/workflows/Centos_kernel_latest_xanmod_lts_gcc9.yml
+++ b/.github/workflows/Centos_kernel_latest_xanmod_lts_gcc9.yml
@@ -10,8 +10,8 @@ name: Centos Kernel latest XANMOD LTS GCC9
 
 on:
   workflow_dispatch:
-  #schedule:
-    #- cron: "38 20 * * 3,6"
+  schedule:
+    - cron: "38 20 * * 3,6"
   #schedule:
   #  - cron: "0 21 * * *"
    # inputs:
@@ -86,9 +86,6 @@ jobs:
         xanmod_lts_ver=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/lts/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}' | awk -F '[-]' '{print $1}')
         xanmod_lts=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/lts/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}')
         cd linux-$xanmod_lts
-        if [ -f "CONFIGS/xanmod/gcc/config" ]; then
-          cp CONFIGS/xanmod/gcc/config .config
-        fi
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
         echo -e "$(nproc) thread compile"
         ln -s /opt/rh/devtoolset-9/root/usr/bin/* /usr/local/bin/
@@ -120,7 +117,8 @@ jobs:
         echo "::set-output name=status::success"
         
     - name: Upload kernel to release
-      uses: softprops/action-gh-release@v1
+      #uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v0.1.7
       if: steps.tag.outputs.status == 'success' && !cancelled()
       env:
         GITHUB_TOKEN: ${{ secrets.TOKEN }}
