--- a/.github/workflows/Centos_kernel_latest_xanmod_lts_C8.yml
+++ b/.github/workflows/Centos_kernel_latest_xanmod_lts_C8.yml
@@ -15,8 +15,8 @@ on:
    #     description: 'SSH connection to Actions'
    #     required: false
    #     default: 'false'
-  schedule:
-    - cron: "38 20 * * 3,6"
+  #schedule:
+    #- cron: "38 20 * * 3,6"
 
 env:
   UPLOAD_DIR: true
