--- a/.github/workflows/Ubuntu_kernel_latest.yml
+++ b/.github/workflows/Ubuntu_kernel_latest.yml
@@ -27,7 +27,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: docker.io/ubuntu:20.04
+    container: docker.io/qctt/kernelbuild:ubuntu20.04
     
     steps:
     - name: Checkout
@@ -37,18 +37,8 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-        sed -i~orig -e 's/# deb-src/deb-src/' /etc/apt/sources.list   
-        apt-get -qq update
-        apt-get -qq install build-essential bzip2 gawk gettext git patch unzip htop wget curl sudo time -y
-        apt-get -qq build-dep linux -y
-        apt-get -qq autoremove --purge
-        apt-get -qq clean
-        cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
-        mkdir -p /workdir
-        sudo mkdir -p /workdir/upload
         sudo chown $USER:$GROUPS /workdir
         sudo chown $USER:$GROUPS /workdir/upload
-        ln -fs /usr/bin/bash /usr/bin/sh
 
     - name: Check for updates
       id: check
